--- a/web-legal/servicio1.html
+++ b/web-legal/servicio1.html
@@ -94,7 +94,7 @@
                                 <a href="https://wa.me/51925756263" class="hero3-number-btn"
                                     target="_blank"><span><i class="fa-regular fa-phone"></i></span> +51 925 756
                                     263</a>
-                                <a href="jyang-system/index.php" class="theme-btn5 font-f-7">Iniciar Sesión</a>
+                                <a href="http://localhost:5173/login" class="theme-btn5 font-f-7">Iniciar Sesión</a>
                             </div>
                         </div>
 
